All links to authors are added. #Closes #1

--- a/bang.html
+++ b/bang.html
@@ -4,6 +4,7 @@
 <head>
 </head>g
        <body>
+               <h1> Producted by AlexKaz8397 with synergy </h1>
                <h1> Hello, World! </h1>
       </body>
 </html>
